# svim

./: .gitignore  CMakeLists.txt  build.bat  main.cpp
src/: events.hpp  session.hpp  types.hpp
src/graphics/: widget.cpp  widget.hpp
src/graphics/api/: api.cpp  api.hpp  screen_data.hpp
src/util/: animate.cpp  animation.cpp  animation.hpp  animations.cpp  animations.hpp  color.cpp  color.hpp  file.cpp  file.hpp  format.hpp
